--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- 앱네임은 properties로 뺄 수가 없네 (ISO-8859-1)-->
-    <string name="app_name">템플릿</string>
+    <string name="app_name">템플릿M2</string>
     <string name="tab1">탭1</string>
     <string name="tab2">탭2</string>
     <string name="tab3">탭3</string>
